--- a/global_competetions.html
+++ b/global_competetions.html
@@ -14,10 +14,10 @@
         <div id="cards">
             <div class="card">
                 <img src="assets/card_assets/quadratics_math_app.jpg" alt="Quadratics Math App Image" width="200px" style="margin-bottom: 10px;"><br>
-                <a class="title" href="https://devsai.hashnode.dev/developed-a-quadratic-math-app-using-cs-and-winforms">Quadratics Math App</a>
-                <p class="subtitle">Windows Forms C#<br>
-                    <a href="https://online.coolestprojects.org/projects/3430">Coolest Project 2022</a>
-                </p>
+                <div class="card-right">
+                    <a class="title" href="https://devsai.hashnode.dev/developed-a-quadratic-math-app-using-cs-and-winforms">Quadratics Math App</a><br><br>
+                <p class="subtitle">Windows Forms C#<br><a href="https://online.coolestprojects.org/projects/3430">Coolest Project 2022</a></p>
+                </div>
             </div>
         </div>
     </main>
