--- a/nav.html
+++ b/nav.html
@@ -23,13 +23,14 @@
     <br>
     <nav id="nav">
         <div id="nav-links">
-            <a href="index.html" class="nav-link" id="nav-projects" style="background-color: rgba(110, 110, 202, 0.579);">Projects & Acomplishments</a>
+            <a href="index.html" class="nav-link" id="nav-projects">Projects & Acomplishments</a>
             <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
-            <a href="#" class="nav-link" id="nav-myblog">My Blog</a>
+            <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-myblog" target="_blank">Blog</a>
             <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
             <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github">GitHub Profile</a>
             <a href="global_competetions.html" class="nav-link" id="nav-global">Global Competetions</a>
-            <a href="extensions.html" class="nav-link" id="nav-extensions">My Extensions</a>
+            <a href="extensions.html" class="nav-link" id="nav-extensions">Extensions</a>
+            <a href="extensions.html" class="nav-link" id="nav-app">Apps</a>
         </div>
     </nav>
 </body>
