--- a/youtube_channels.html
+++ b/youtube_channels.html
@@ -37,7 +37,7 @@
     <script>
         $('#loadedNav').load('nav.html');
         setTimeout(function() {
-            document.getElementById("nav-global").classList.add("nav-link-active");
+            document.getElementById("nav-ytchannel").classList.add("nav-link-active");
         }, 0200);
     </script>
 </body>
