--- a/global_competetions.html
+++ b/global_competetions.html
@@ -13,11 +13,15 @@
     <main id="main">
         <div id="cards">
             <div class="card">
-                <img src="assets/card_assets/quadratics_math_app.jpg" alt="Quadratics Math App Image" width="200px" style="margin-bottom: 10px;"><br>
+                <img src="assets/card_assets/quadratics_math_app.jpg" alt="Quadratics Math App Image"><br>
                 <div class="card-right">
                     <a class="title" href="https://devsai.hashnode.dev/developed-a-quadratic-math-app-using-cs-and-winforms">Quadratics Math App</a><br><br>
                 <p class="subtitle">Windows Forms C#<br><a href="https://online.coolestprojects.org/projects/3430">Coolest Project 2022</a></p>
                 </div>
+            </div>
+            <div class="card">
+                <img src="assets/card_assets/pin.svg" alt="Pin" style="width: 50px;">
+                <p class="subtitle">Omdena</p>
             </div>
         </div>
     </main>
