--- a/youtube_channels.html
+++ b/youtube_channels.html
@@ -11,27 +11,29 @@
 <body>
     <div id="loadedNav"></div>
     <main id="main">
-        <div id="cards">
-            <a href="https://www.youtube.com/channel/UCMUr84eGnS0x4uspwzbd-7w" target="_blank">
-                <div class="card">
-                    <img src="assets/yt_channel_icons/techmcgamez.png" alt="Tech MC Gamez Icon" width="110px">
-                    <div class="card-right">
-                        <p class="title">TechMCGamez</p><br>
-                        <p class="subtitle">Gaming Channel</p>
+        <div id="cards" style="flex-direction: column;">
+            <div class="card">
+                <a href="https://www.youtube.com/channel/UCMUr84eGnS0x4uspwzbd-7w" target="_blank">
+                    <div class="card">
+                        <img src="assets/yt_channel_icons/techmcgamez.png" alt="Tech MC Gamez Icon" style="border-radius: 200px;">
+                        <div class="card-right">
+                            <p class="title">TechMCGamez</p><br>
+                            <p class="subtitle">Gaming Channel</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </div>
-        <div id="cards">
-            <a href="https://www.youtube.com/channel/UCMUr84eGnS0x4uspwzbd-7w" target="_blank">
-                <div class="card">
-                    <img src="assets/yt_channel_icons/techmcgamez.png" alt="Code Vibes Icon" width="110px">
-                    <div class="card-right">
-                        <p class="title">Code Vibes</p><br>
-                        <p class="subtitle">Coding Channel</p>
+                </a>
+            </div>
+            <div class="card">
+                <a href="https://www.youtube.com/channel/UC2OUBrGSPqJBm4A32YVbe9A" target="_blank">
+                    <div class="card">
+                        <img src="https://yt3.ggpht.com/ytc/AMLnZu9fzUhi_JNGJoJw_ni3QI5RKwO5UnmPOUkIUVC9=s88-c-k-c0x00ffffff-no-rj" alt="Code Vibes Icon" style="border-radius: 200px;">
+                        <div class="card-right">
+                            <p class="title">Code Vibes</p><br>
+                            <p class="subtitle">Coding Channel</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </main>
     <script>
