--- a/certificates.html
+++ b/certificates.html
@@ -8,23 +8,61 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body id="body">
     <div id="loadedNav"></div>
     <main id="certificate-main">
         <div id="certificates">
-            <img src="assets/class-certificates/Kalvi40.png" alt="Kalvi 40 Appreciation Certificate" class="certificate">
-            <img src="assets/class-certificates/unity1.png" alt="John Hopkins University Unity I Advanced Certificate" class="certificate">
-            <img src="assets/class-certificates/matlab1.png" alt="John Hopkins University MATLAB I Advanced Certificate" class="certificate">
-            <img src="assets/class-certificates/matlab2.png" alt="John Hopkins University MATLAB II Proficient Certificate" class="certificate">
-            <img src="assets/class-certificates/tanaaibootcamp2021.png" alt="Tana AI Bootcamp 2021 Participation Certifiate" class="certificate">
-            <img src="assets/class-certificates/courseraaicourse1.jpeg" alt="Coursera Supervised Machine Learning: Regression and Classification Completion Award" class="certificate">
+            <img onclick="on('kalvi')" src="assets/class-certificates/Kalvi40.png" alt="Kalvi 40 Appreciation Certificate" class="certificate">
+            <img onclick="on('unityi')" src="assets/class-certificates/unity1.png" alt="John Hopkins University Unity I Advanced Certificate" class="certificate">
+            <img onclick="on('matlabi')" src="assets/class-certificates/matlab1.png" alt="John Hopkins University MATLAB I Advanced Certificate" class="certificate">
+            <img onclick="on('matlabii')" src="assets/class-certificates/matlab2.png" alt="John Hopkins University MATLAB II Proficient Certificate" class="certificate">
+            <img onclick="on('tanaai2021')" src="assets/class-certificates/tanaaibootcamp2021.png" alt="Tana AI Bootcamp 2021 Participation Certifiate" class="certificate">
+            <img onclick="on('coursera1')" src="assets/class-certificates/courseraaicourse1.jpeg" alt="Coursera Supervised Machine Learning: Regression and Classification Completion Certificate" class="certificate">
+            <img onclick="on('omdenak12')" src="assets/class-certificates/omdena_k12_food_wastage.png" alt="Omdena K-12 Chapter: Food Wastage Completetion Certificate" class="certificate">
+            <!-- <img src="assets/class-certificates/epam_ekids_introcpp.png" alt="ePam eKids: Intro to C++ Completetion Certificate" class="certificate"> -->
+            <img onclick="on('epampy')" src="assets/class-certificates/epam_ekids_intropython.png" alt="ePam eKids: Intro to Python Completetion Certificate" class="certificate">
         </div>
     </main>
+    <div id="overlay" onclick="off()">
+        <img src="" alt="Image Preview" id="img-preview">
+    </div>
     <script>
         $('#loadedNav').load('nav.html');
         setTimeout(function() {
             document.getElementById("nav-certificates").classList.add("nav-link-active");
         }, 0200);
+
+        function on(id) {
+            if (id == 'kalvi') {
+                $("#img-preview").attr("src", "assets/class-certificates/Kalvi40.png");
+                $("#overlay").show();
+            } else if (id == 'unityi') {
+                $("#img-preview").attr("src", "assets/class-certificates/unity1.png");
+                $("#overlay").show();
+            } else if (id == 'matlabi') {
+                $("#img-preview").attr("src", "assets/class-certificates/matlab1.png");
+                $("#overlay").show();
+            } else if (id == 'matlabii') {
+                $("#img-preview").attr("src", "assets/class-certificates/matlab2.png");
+                $("#overlay").show();
+            } else if (id == 'tanaai2021') {
+                $("#img-preview").attr("src", "assets/class-certificates/tanaaibootcamp2021.png");
+                $("#overlay").show();
+            } else if (id == 'coursera1') {
+                $("#img-preview").attr("src", "assets/class-certificates/courseraaicourse1.jpeg");
+                $("#overlay").show();
+            } else if (id == 'omdenak12') {
+                $("#img-preview").attr("src", "assets/class-certificates/omdena_k12_food_wastage.png");
+                $("#overlay").show();
+            } else if (id == 'epampy') {
+                $("#img-preview").attr("src", "assets/class-certificates/epam_ekids_intropython.png");
+                $("#overlay").show();
+            }
+        }
+
+        function off() {
+            document.getElementById("overlay").style.display = "none";
+        }
     </script>
 </body>
 </html>
