--- a/nav.html
+++ b/nav.html
@@ -1,37 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nav</title>
-    <link href="styles.css" rel="stylesheet">
-    <link href="s-logo.jpg" rel="icon">
-</head>
-<body>
-    <section id="about-me">
-        <div id="about-me-inner">
-            <div id="about-me-top">
-                <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">
-                <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
-            </div>
-            <div id="about-me-bottom">
-                <p>A high school freshman.<br>Passionate coder, blogger, and YouTuber.<br>Technology enthusiast and gadgets saavy.<br><br>"Measuring programming progress by lines of code is like measuring aircraft building progress by weight." – Bill Gates</p>
-            </div>
+<section id="about-me">
+    <div id="about-me-inner">
+        <div id="about-me-top">
+            <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">
+            <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
         </div>
-    </section>
-    <br>
-    <nav id="nav">
-        <div id="nav-links">
-            <a href="index.html" class="nav-link" id="nav-projects">Projects & Acomplishments</a>
-            <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
-            <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-myblog" target="_blank">Blog</a>
-            <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
-            <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github">GitHub Profile</a>
-            <a href="global_competetions.html" class="nav-link" id="nav-global">Global Competetions</a>
-            <a href="extensions.html" class="nav-link" id="nav-extensions">Extensions</a>
-            <a href="extensions.html" class="nav-link" id="nav-app">Apps</a>
-        </div>
-    </nav>
-</body>
-</html>
+    </div>
+</section>
+<br>
+<nav id="nav">
+    <div id="nav-links">
+        <a href="index.html" class="nav-link" id="nav-aboutme">About Me</a>
+        <a href="projects.html" class="nav-link" id="nav-projects">Projects & Acomplishments</a>
+        <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
+        <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-myblog" target="_blank">Blog</a>
+        <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
+        <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github">GitHub Profile</a>
+        <a href="global_competetions.html" class="nav-link" id="nav-global">Global Competetions</a>
+        <a href="extensions.html" class="nav-link" id="nav-extensions">Extensions</a>
+        <a href="#" class="nav-link" id="nav-app">Apps</a>
+        <a href="clubs.html" class="nav-link" id="nav-clubs">Clubs</a>
+    </div>
+</nav>
