--- a/global_competetions.html
+++ b/global_competetions.html
@@ -15,8 +15,8 @@
             <div class="card">
                 <img src="assets/card_assets/quadratics_math_app.jpg" alt="Quadratics Math App Image"><br>
                 <div class="card-right">
-                    <a class="title" href="https://devsai.hashnode.dev/developed-a-quadratic-math-app-using-cs-and-winforms">Quadratics Math App</a><br><br>
-                <p class="subtitle">Windows Forms C#<br><a href="https://online.coolestprojects.org/projects/3430">Coolest Project 2022</a></p>
+                    <a class="title" href="https://devsai.hashnode.dev/developed-a-quadratic-math-app-using-cs-and-winforms">Quadratics Math App&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br><br>
+                <p class="subtitle">Windows Forms C#<br><a href="https://online.coolestprojects.org/projects/3430">Coolest Project 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
                 </div>
             </div>
             <div class="card">
