--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
     <div id="loadedNav"></div>
     <main id="main" style="text-align: center;">
-        <div id="about-me-bottom">
+        <div id="about-me-inner">
             <br><br>
             <p>A high school freshman.<br>Passionate coder, blogger, and YouTuber.<br>Technology enthusiast and gadgets saavy.<br><br>"Measuring programming progress by lines of code is like measuring aircraft building progress by weight." – Bill Gates</p>
+            <p><i class="bi bi-envelope-fill"></i>&nbsp;Email me: <a href="mailto:saisiddhish@gmail.com" style="color: white;">saisiddhish@gmail.com</a></p>
         </div>
     </main>
     <script>
