--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,12 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 <section id="about-me">
     <div id="about-me-inner">
         <div id="about-me-top">
-            <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">
-            <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
+            <img src="assets/sai-picture-circle.png" alt="E"><br>
+            <div style="display: inline-flex; align-items: center;">
+                <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">
+                <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
+            </div>
         </div>
     </div>
 </section>
@@ -10,14 +14,14 @@
 <nav id="nav">
     <div id="nav-links">
         <a href="index.html" class="nav-link" id="nav-aboutme">About Me</a>
-        <a href="projects.html" class="nav-link" id="nav-projects">Projects & Acomplishments</a>
+        <a href="projects.html" class="nav-link" id="nav-projects">Projects</a>
         <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
-        <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-myblog" target="_blank">Blog</a>
-        <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
-        <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github">GitHub Profile</a>
         <a href="global_competetions.html" class="nav-link" id="nav-global">Global Competetions</a>
-        <a href="extensions.html" class="nav-link" id="nav-extensions">Extensions</a>
+        <a href="extensions.html" class="nav-link" id="nav-extensions">Browser Extensions</a>
         <a href="#" class="nav-link" id="nav-app">Apps</a>
         <a href="clubs.html" class="nav-link" id="nav-clubs">Clubs</a>
+        <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-blog" target="_blank">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+        <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github">GitHub Profile&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+        <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
     </div>
 </nav>
