--- a/apps.html
+++ b/apps.html
@@ -23,16 +23,12 @@
                     </p>
                 </div>
             </div>
-            <div class="card">
-                <img src="assets/card_assets/pin.svg" alt="Pin" style="width: 50px;">
-                <p class="subtitle">Omdena</p>
-            </div>
         </div>
     </main>
     <script>
         $('#loadedNav').load('nav.html');
         setTimeout(function() {
-            document.getElementById("nav-globalcomps").classList.add("nav-link-active");
+            document.getElementById("nav-apps").classList.add("nav-link-active");
         }, 0200);
     </script>
 </body>
