--- a/clubs.html
+++ b/clubs.html
@@ -13,24 +13,33 @@
     <main id="main">
         <div id="cards" style="flex-direction: column;">
             <div class="card">
-                <img src="https://chsftcrobotics.weebly.com/uploads/1/2/3/6/123696510/published/copy-of-club-logo-2020-21_6.png" alt="Centennial FTC Logo"><br>
+                <img src="https://chsftcrobotics.weebly.com/uploads/1/2/3/6/123696510/published/copy-of-club-logo-2020-21_6.png" alt="Centennial FTC Logo" style="width: 125px;"><br>
                 <div class="card-right">
                     <p class="title">Centennial FTC Robotics</p><br>
-                    <p class="subtitle"></p>
+                    <p class="subtitle">
+                        Centennial High School, Howard County<br>
+                        <b>Languages & Tools:</b> Java & Android Studio
+                    </p>
                 </div>
             </div>
             <div class="card">
-                <img src="assets/card_assets/img-placeholder.png" alt="Centennial FTC Logo"><br>
+                <img src="https://cint.info/media/cint_logo.png" alt="Pyoneers Logo" style="width: 125px;"><br>
                 <div class="card-right">
-                    <p class="title">Pyoneers</p><br>
-                    <p class="subtitle"></p>
+                    <p class="title">Pyoneers Coding Club</p><br>
+                    <p class="subtitle">
+                        Centennial High School, Howard County<br>
+                        <b>Languages & Tools:</b> Python
+                    </p>
                 </div>
             </div>
             <div class="card">
-                <img src="assets/card_assets/img-placeholder.png" alt="Centennial FTC Logo"><br>
+                <img src="https://th.bing.com/th/id/R.01e21540d0c66da28776ac18c2f2ee16?rik=iIsXRyvbIBO7Hw&pid=ImgRaw&r=0" alt="Centennial FTC Logo" style="width: 125px;"><br>
                 <div class="card-right">
-                    <p class="title">Competetive Coding</p><br>
-                    <p class="subtitle"></p>
+                    <p class="title">Competetive Coding Club</p><br>
+                    <p class="subtitle">
+                        Centennial High School, Howard County<br>
+                        <b>Languages & Tools:</b> Python
+                    </p>
                 </div>
             </div>
         </div>
