--- a/extensions.html
+++ b/extensions.html
@@ -13,12 +13,13 @@
     <main id="main">
         <div id="cards">
             <div class="card">
-                <img src="assets/card_assets/multi_lingual_input_tools.png" alt="Multi-Lingual Input Tools Image" style="margin-bottom: -10px">
+                <img src="assets/card_assets/multi_lingual_input_tools.png" alt="Multi-Lingual Input Tools Image" style="width: 125px;">
                 <div class="card-right">
                     <p class="title">Multi-Lingual Input Tools</p><br>
                     <p class="subtitle">
-                        <a href="https://chrome.google.com/webstore/detail/multi-lingual-input-tools/dkbgodmmblfcnfledmedmepimmpebnjo?hl=en&authuser=0">Chrome Webstore</a><br>
-                        <a href="https://microsoftedge.microsoft.com/addons/detail/multilingual-input-tools/aoehggnalolhonphifnooepocfjpghfl">Microsoft Edge Add-ons</a>
+                        You can quickly & easily copy paste accented letters<br>and symbols from a several of languages with this extension.<br>
+                        <b>Languages & Tools:</b> HTML5, CSS3, JavaScript, Manivest V3 (JSON), Visual Studio Code<br>
+                        <a href="https://chrome.google.com/webstore/detail/multi-lingual-input-tools/dkbgodmmblfcnfledmedmepimmpebnjo?hl=en&authuser=0">Chrome Webstore&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a> | <a href="https://microsoftedge.microsoft.com/addons/detail/multilingual-input-tools/aoehggnalolhonphifnooepocfjpghfl">Microsoft Edge Add-ons&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
                     </p>
                 </div>
             </div>
