--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <div id="loadedNav"></div>
     <main id="main" style="text-align: center;">
         <div id="about-me-inner">
-            <br><br>
-            <p>A high school freshman.<br>Passionate coder, blogger, and YouTuber.<br>Technology enthusiast and gadgets saavy.<br><br>"Measuring programming progress by lines of code is like measuring aircraft building progress by weight." – Bill Gates</p>
+            <p>A high school freshman from Centennial High School, Howard County, Maryland.<br>Passionate coder, blogger, and YouTuber.<br>Technology enthusiast and gadgets saavy.<br><br>
+                <b><i class="bi bi-controller"></i>&nbsp;&nbsp;Hobbies:</b> Table Tennis, Video Games, Coding, YouTube, Blogging<br><br>
+                <b><i class="bi bi-heart"></i>&nbsp;&nbsp;Areas of Interest:</b> AI & Robotics, Data Science & Machine Learning, Computer Science<br><br>
+                <b><i class="bi bi-code-slash"></i>&nbsp;&nbsp;Programming Languages:</b> HTML5 (Markup Language), CSS3 (Stylesheet Language), SASS (Preprocessor Language), JavaScript, jQuery (JS Library), Java, C#, MATLAB, Python, Lua (Roblox)<br><br>
+                <b><i class="bi bi-tools"></i>&nbsp;&nbsp;Tools:</b> Git, Visual Studio, Visual Studio Code, Windows Forms, Replit, Unity, PyCharm, MATLAB, Roblox Studio, Android Studio
+            </p>
             <p><i class="bi bi-envelope-fill"></i>&nbsp;Email me: <a href="mailto:saisiddhish@gmail.com" style="color: white;">saisiddhish@gmail.com</a></p>
         </div>
     </main>
