--- a/youtube_channels.html
+++ b/youtube_channels.html
@@ -17,7 +17,7 @@
                     <div class="card">
                         <img src="assets/yt_channel_icons/techmcgamez.png" alt="Tech MC Gamez Icon" style="border-radius: 200px;">
                         <div class="card-right">
-                            <p class="title">TechMCGamez</p><br>
+                            <p class="title">TechMCGamez&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></p><br>
                             <p class="subtitle">Gaming Channel</p>
                         </div>
                     </div>
@@ -28,7 +28,7 @@
                     <div class="card">
                         <img src="https://yt3.ggpht.com/ytc/AMLnZu9fzUhi_JNGJoJw_ni3QI5RKwO5UnmPOUkIUVC9=s88-c-k-c0x00ffffff-no-rj" alt="Code Vibes Icon" style="border-radius: 200px;">
                         <div class="card-right">
-                            <p class="title">Code Vibes</p><br>
+                            <p class="title">Code Vibes&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></p><br>
                             <p class="subtitle">Coding Channel</p>
                         </div>
                     </div>
