--- a/apps.html
+++ b/apps.html
@@ -15,11 +15,11 @@
             <div class="card">
                 <img src="assets/card_assets/quadratics_math_app.jpg" alt="Quadratics Math App Image"><br>
                 <div class="card-right">
-                    <a class="title" href="https://devsai.hashnode.dev/developed-a-quadratic-math-app-using-cs-and-winforms" target="_blank">Quadratics Math App&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br><br>
+                    <a class="title" href="https://www.youtube.com/watch?v=9dFReb1373A&feature=youtu.be" target="_blank">Quadratics Math App&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br><br>
                     <p class="subtitle">
                         Mastering quadratics was challenging, I made the decision to build this project,<br>so I developed an app to help students who are struggling with quadratics.<br>
                         <b>Languages & Tools:</b> C# & Windows Forms<br>
-                        <a href="https://online.coolestprojects.org/projects/3430" target="_blank">Coolest Project 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+                        <a href="https://online.coolestprojects.org/projects/3430" target="_blank">Coolest Project Global Contest | July 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
                     </p>
                 </div>
             </div>
