--- a/bootcamps.html
+++ b/bootcamps.html
@@ -15,14 +15,14 @@
             <div class="card">
                 <img src="https://th.bing.com/th/id/OIP.SSOdAEuceJWlcsIupaRGdAHaF7?pid=ImgDet&rs=1" alt="Lung Image">
                 <div class="card-right">
-                    <p class="title">[IN PROGRESS] <!--Mark Cuban Foundation:--> AI Bootcamp</p><br>
+                    <p class="title">[IN PROGRESS] <!--Mark Cuban Foundation:--> AI Bootcamp | November 2022</p><br>
                     <p class="subtitle">Information will be available after 11/12/2022</p>
                 </div>
             </div>
             <div class="card">
                 <img src="https://th.bing.com/th/id/OIP.bbeVOdgKcK5i4rMsRGCAlwHaF7?pid=ImgDet&rs=1" alt="QUIZ Image">
                 <div class="card-right">
-                    <p class="title">TANA Artifical Intelligence (AI) Bootcamp (November) 2021</p><br>
+                    <p class="title">TANA Artifical Intelligence (AI) Bootcamp | November 2021</p><br>
                     <p class="subtitle">Create enterprise-grade machine learning models with an emphasis on<br>classification, regression, and clustering to address real-world issues.</p>
                 </div>
             </div>
