--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,19 @@
                 <div class="card-right">
                     <p class="title">Cake Game (Infinite Runner Style) | August 2021</p><br>
                     <p class="subtitle">
-                        You control a cake in this Unity-made game while attempting to avoid moving pies.<br>
+                        In this Unity-made game, you control a cake while attempting to dodge moving pies.<br>
                         <b>Languages & Tools:</b> C# & Unity<br>
+                        John Hopkins University Applied Physics Laboratory: Unity I Day 3 Project<br><a href="assets/card_assets/UnityI/Day3/Windowsx86.zip">Download (Windows x86)</a> | <a href="assets/card_assets/UnityI/Day3/Windowsx64.zip">Download (Windows x64)</a> | <a href="assets/card_assets/UnityI/Day3/Linux.zip">Download (Linux)</a><br>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://www.picpedia.org/chalkboard/images/nonprofit.jpg" alt="Kalvi40 Image">
+                <div class="card-right">
+                    <p class="title">Kalvi40 (Non-Profit) | August 2021</p><br>
+                    <p class="subtitle">
+                        A free Tamil educational application for rural students from 3rd to 8th grade<br>in Tamil Nadu and Puducherry, India. I assisted the creation of the digital content inside the application.<br>
+                        <b>Languages & Tools:</b> Microsoft Powerpoint<br>
                         John Hopkins University Applied Physics Laboratory: Unity I Day 3 Project<br><a href="assets/card_assets/UnityI/Day3/Windowsx86.zip">Download (Windows x86)</a> | <a href="assets/card_assets/UnityI/Day3/Windowsx64.zip">Download (Windows x64)</a> | <a href="assets/card_assets/UnityI/Day3/Linux.zip">Download (Linux)</a><br>
                     </p>
                 </div>
@@ -61,7 +72,7 @@
                 <div class="card-right">
                     <p class="title">3D Bus Driving Game | July 2021</p><br>
                     <p class="subtitle">
-                        You control a bus in this game made using Unity, trying to maneuver past obstacles in your way.<br>To reach the parking lot at the end is your objective.<br>
+                        In this Unity-made game, you control a bus trying to maneuver past obstacles in your way.<br>To reach the parking lot at the end is your objective.<br>
                         <b>Languages & Tools:</b> C# & Unity<br>
                         John Hopkins University Applied Physics Laboratory: Unity I Day 1 Project<br><a href="assets/card_assets/UnityI/Day1/Windowsx86.zip">Download (Windows x86)</a> | <a href="assets/card_assets/UnityI/Day1/Windowsx64.zip">Download (Windows x64)</a> | <a href="assets/card_assets/UnityI/Day1/Linux.zip">Download (Linux)</a> | <a href="assets/card_assets/UnityI/Day1/Mac.app.zip">Download (Mac)</a>
                     </p>
