--- a/global_competetions.html
+++ b/global_competetions.html
@@ -15,17 +15,24 @@
             <div class="card">
                 <img src="assets/card_assets/quadratics_math_app.jpg" alt="Quadratics Math App Image"><br>
                 <div class="card-right">
-                    <a class="title" href="https://devsai.hashnode.dev/developed-a-quadratic-math-app-using-cs-and-winforms" target="_blank">Quadratics Math App&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br><br>
+                    <a class="title" href="https://www.youtube.com/watch?v=9dFReb1373A&feature=youtu.be" target="_blank">Quadratics Math App&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br><br>
                     <p class="subtitle">
                         Mastering quadratics was challenging, I made the decision to build this project,<br>so I developed an app to help students who are struggling with quadratics.<br>
                         <b>Languages & Tools:</b> C# & Windows Forms<br>
-                        <a href="https://online.coolestprojects.org/projects/3430" target="_blank">Coolest Project 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+                        <a href="https://online.coolestprojects.org/projects/3430" target="_blank">Coolest Project Global Contest | July 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
                     </p>
                 </div>
             </div>
             <div class="card">
-                <img src="assets/card_assets/pin.svg" alt="Pin" style="width: 50px;">
-                <p class="subtitle">Omdena</p>
+                <img src="https://c2.staticflickr.com/6/5557/15032644782_1b9d7530d8_b.jpg" alt="Pin">
+                <div class="card-right">
+                    <a class="title" href="https://omdena.com/chapter-challenges/using-machine-learning-to-reduce-food-waste/" target="_blank">Omdena K-12 Chapter: Reducing Food Wastage using Machine Learning&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a><br><br>
+                    <p class="subtitle">
+                        To create an AI model that can scan and recognize waste materials,<br>including food writing a program that can identify when waste is getting<br>close to its expiration date and then make recommendations for what to do with the waste.<br>
+                        <b>Languages & Tools:</b> Flutter & Figma<br>
+                        <a href="https://www.linkedin.com/posts/omdena_omdena-k12-machinelearning-activity-6943430799203422208-R_6Y?utm_source=share&utm_medium=member_desktop" target="_blank">LinkedIn News Feed | July 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+                    </p>
+                </div>
             </div>
         </div>
     </main>
