--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <b><i class="bi bi-controller"></i>&nbsp;&nbsp;Hobbies:</b> Table Tennis, Video Games, Coding, YouTube, Blogging<br><br>
                 <b><i class="bi bi-heart"></i>&nbsp;&nbsp;Areas of Interest:</b> AI & Robotics, Data Science & Machine Learning, Computer Science<br><br>
                 <b><i class="bi bi-code-slash"></i>&nbsp;&nbsp;Programming Languages:</b> HTML5 (Markup Language), CSS3 (Stylesheet Language), SASS (Preprocessor Language), JavaScript, jQuery (JS Library), Java, C#, MATLAB, Python, Lua (Roblox)<br><br>
-                <b><i class="bi bi-tools"></i>&nbsp;&nbsp;Tools:</b> Git, Visual Studio, Visual Studio Code, Windows Forms, Replit, Unity, PyCharm, MATLAB, Roblox Studio, Android Studio
+                <b><i class="bi bi-tools"></i>&nbsp;&nbsp;Tools:</b> Git, Visual Studio 2019 & 2022, Visual Studio Code, Windows Forms, Replit, Unity 2021, PyCharm 2021 & 2022, MATLAB 2021, Roblox Studio 2022, Android Studio Chipmunk 2021
             </p>
             <p><i class="bi bi-envelope-fill"></i>&nbsp;Email me: <a href="mailto:saisiddhish@gmail.com" style="color: white;">saisiddhish@gmail.com</a></p>
         </div>
