--- a/clubs.html
+++ b/clubs.html
@@ -17,8 +17,8 @@
                 <div class="card-right">
                     <p class="title">Centennial FTC Robotics | 2022-2023</p><br>
                     <p class="subtitle">
-                        Centennial High School, Howard County<br>
-                        <b>Languages & Tools:</b> Java & Android Studio
+                        Centennial High School, Howard County<br><br>
+                        <b class="subtitle-white">Languages & Tools:</b> Java & Android Studio
                     </p>
                 </div>
             </div>
@@ -27,8 +27,8 @@
                 <div class="card-right">
                     <p class="title">Pyoneers Coding Club | 2022-2023</p><br>
                     <p class="subtitle">
-                        Centennial High School, Howard County<br>
-                        <b>Languages & Tools:</b> Python
+                        Centennial High School, Howard County<br><br>
+                        <b class="subtitle-white">Languages & Tools:</b> Python
                     </p>
                 </div>
             </div>
@@ -37,8 +37,8 @@
                 <div class="card-right">
                     <p class="title">Competetive Coding Club | 2022-2023</p><br>
                     <p class="subtitle">
-                        Centennial High School, Howard County<br>
-                        <b>Languages & Tools:</b> Python
+                        Centennial High School, Howard County<br><br>
+                        <b class="subtitle-white">Languages & Tools:</b> Python
                     </p>
                 </div>
             </div>
