--- a/youtube_channels.html
+++ b/youtube_channels.html
@@ -13,26 +13,22 @@
     <main id="main">
         <div id="cards" style="flex-direction: column;">
             <div class="card">
-                <a href="https://www.youtube.com/channel/UCMUr84eGnS0x4uspwzbd-7w" target="_blank">
-                    <div class="card">
-                        <img src="assets/yt_channel_icons/techmcgamez.png" alt="Tech MC Gamez Icon" style="border-radius: 200px;">
-                        <div class="card-right">
-                            <p class="title">TechMCGamez&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></p><br>
-                            <p class="subtitle">Gaming Channel</p>
-                        </div>
+                <div class="card">
+                    <img src="assets/yt_channel_icons/techmcgamez.png" alt="Tech MC Gamez Icon" style="border-radius: 200px; width: 125px;">
+                    <div class="card-right">
+                        <p class="title"><a href="https://www.youtube.com/channel/UCMUr84eGnS0x4uspwzbd-7w" target="_blank">TechMCGamez&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
+                        <p class="subtitle">Gaming Channel</p>
                     </div>
-                </a>
+                </div>
             </div>
             <div class="card">
-                <a href="https://www.youtube.com/channel/UC2OUBrGSPqJBm4A32YVbe9A" target="_blank">
-                    <div class="card">
-                        <img src="https://yt3.ggpht.com/ytc/AMLnZu9fzUhi_JNGJoJw_ni3QI5RKwO5UnmPOUkIUVC9=s88-c-k-c0x00ffffff-no-rj" alt="Code Vibes Icon" style="border-radius: 200px;">
-                        <div class="card-right">
-                            <p class="title">Code Vibes&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></p><br>
-                            <p class="subtitle">Coding Channel</p>
-                        </div>
+                <div class="card">
+                    <img src="https://yt3.ggpht.com/ytc/AMLnZu9fzUhi_JNGJoJw_ni3QI5RKwO5UnmPOUkIUVC9=s88-c-k-c0x00ffffff-no-rj" alt="Code Vibes Icon" style="border-radius: 200px; width: 125px;">
+                    <div class="card-right">
+                        <p class="title"><a href="https://www.youtube.com/channel/UC2OUBrGSPqJBm4A32YVbe9A" target="_blank">Code Vibes&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
+                        <p class="subtitle">Coding Channel</p>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </main>
