--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 <body>
     <div id="loadedNav"></div>
-    <main id="main" style="text-align: center;">
+    <main id="main" style="text-align: left;">
         <div id="about-me-inner">
-            <p>A high school freshman from Centennial High School, Howard County, Maryland.<br>Passionate coder, blogger, and YouTuber.<br>Technology enthusiast and gadgets saavy.<br><br>
-                <b><i class="bi bi-controller"></i>&nbsp;&nbsp;Hobbies:</b> Table Tennis, Video Games, Coding, YouTube, Blogging<br><br>
-                <b><i class="bi bi-heart"></i>&nbsp;&nbsp;Areas of Interest:</b> AI & Robotics, Data Science & Machine Learning, Computer Science<br><br>
-                <b><i class="bi bi-code-slash"></i>&nbsp;&nbsp;Programming Languages:</b> HTML5 (Markup Language), CSS3 (Stylesheet Language), SASS (Preprocessor Language), JavaScript, jQuery (JS Library), Java, C#, MATLAB, Python, Lua (Roblox)<br><br>
-                <b><i class="bi bi-tools"></i>&nbsp;&nbsp;Tools:</b> Git, Visual Studio 2019 & 2022, Visual Studio Code, Windows Forms, Replit, Unity 2021, PyCharm 2021 & 2022, MATLAB 2021, Roblox Studio 2022, Android Studio Chipmunk 2021
+            <p class="about-me-text subtitle-white-bigger" style="font-size: 14px;">Hello 👋<br><br>A high school freshman from Centennial High School, Howard County, Maryland. Passionate coder, blogger, and YouTuber. Technology enthusiast and gadgets saavy.</p>
+            <p class="about-me-text subtitle">
+                <b class="subtitle-white-bigger"><i class="bi bi-controller"></i>&nbsp;&nbsp;Hobbies:</b> Table Tennis, Video Games, Coding, YouTube, Blogging<br><br>
+                <b class="subtitle-white-bigger"><i class="bi bi-heart"></i>&nbsp;&nbsp;Areas of Interest:</b> AI & Robotics, Data Science & Machine Learning, Computer Science<br><br>
+                <b class="subtitle-white-bigger"><i class="bi bi-code-slash"></i>&nbsp;&nbsp;Programming Languages:</b> HTML5 (Markup Language), CSS3 (Stylesheet Language), SASS (Preprocessor Language), JavaScript, jQuery (JS Library), Java, C#, MATLAB, Python, Lua (Roblox)<br><br>
+                <b class="subtitle-white-bigger"><i class="bi bi-tools"></i>&nbsp;&nbsp;Tools:</b> Git, Visual Studio 2019 & 2022, Visual Studio Code, Windows Forms, Replit, Unity 2021, PyCharm 2021 & 2022, MATLAB 2021, Roblox Studio 2022, Android Studio Chipmunk 2021<br>
             </p>
-            <p><i class="bi bi-envelope-fill"></i>&nbsp;Email me: <a href="mailto:saisiddhish@gmail.com" style="color: white;">saisiddhish@gmail.com</a></p>
+            <p class="about-me-text subtitle-white-bigger"><i class="bi bi-envelope-fill"></i>&nbsp;Email me at <a href="mailto:saisiddhish@gmail.com" >saisiddhish@gmail.com</a></p>
         </div>
     </main>
     <script>
