Fixed all warning and errors

--- a/apps.html
+++ b/apps.html
@@ -15,10 +15,10 @@
             <div class="card">
                 <img src="assets/card_assets/quadratics_math_app.jpg" alt="Quadratics Math App Image"><br>
                 <div class="card-right">
-                    <p class="title"><a href="https://www.youtube.com/watch?v=9dFReb1373A&feature=youtu.be" target="_blank">Quadratics Math App&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
+                    <p class="title"><a href="https://www.youtube.com/watch?v=9dFReb1373A&feature=youtu.be" target="_blank" rel="noopener">Quadratics Math App&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
                     <p class="subtitle"> Mastering quadratics was challenging, I made the decision to build this project,<br>so I developed an app to help students who are struggling with quadratics.</p>
-                    <p class="subtitle"><b class="subtitle-white">Languages & Tools:</b> C#, Windows Forms</p>
-                    <p class="subtitle"><a href="https://online.coolestprojects.org/projects/3430" target="_blank">Coolest Project Global Contest | July 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
+                    <p class="subtitle"><b class="color-white">Languages & Tools:</b> C#, Windows Forms</p>
+                    <p class="subtitle"><a href="https://online.coolestprojects.org/projects/3430" target="_blank" rel="noopener">Coolest Project Global Contest | July 2022&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
                 </div>
             </div>
         </div>
