--- a/bootcamps.html
+++ b/bootcamps.html
@@ -11,7 +11,7 @@
 <body>
     <div id="loadedNav"></div>
     <main id="main">
-        <div id="cards" style="flex-direction: column;">
+        <div id="cards" class="flex_direction-column">
             <div class="card">
                 <img src="https://th.bing.com/th/id/OIP.SSOdAEuceJWlcsIupaRGdAHaF7?pid=ImgDet&rs=1" alt="Lung Image">
                 <div class="card-right">
