--- a/extensions.html
+++ b/extensions.html
@@ -13,12 +13,12 @@
     <main id="main">
         <div id="cards">
             <div class="card">
-                <img src="assets/card_assets/multi_lingual_input_tools.png" alt="Multi-Lingual Input Tools Image" style="width: 125px;">
+                <img class="width-125px" src="assets/card_assets/multi_lingual_input_tools.png" alt="Multi-Lingual Input Tools Image">
                 <div class="card-right">
                     <p class="title">Multi-Lingual Input Tools | April 2022</p><br>
                     <p class="subtitle">You can quickly & easily copy paste accented letters and symbols from a several of languages with this extension.</p>
-                    <p class="subtitle"><b class="subtitle-white">Languages & Tools:</b> HTML5, CSS3, JavaScript, Manivest V3 (JSON), Visual Studio Code</p>
-                    <p class="subtitle"><a href="https://chrome.google.com/webstore/detail/multi-lingual-input-tools/dkbgodmmblfcnfledmedmepimmpebnjo?hl=en&authuser=0" target="_blank">Chrome Webstore&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a> | <a href="https://microsoftedge.microsoft.com/addons/detail/multilingual-input-tools/aoehggnalolhonphifnooepocfjpghfl" target="_blank">Microsoft Edge Add-ons&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
+                    <p class="subtitle"><b class="color-white">Languages & Tools:</b> HTML5, CSS3, JavaScript, Manivest V3 (JSON), Visual Studio Code</p>
+                    <p class="subtitle"><a href="https://chrome.google.com/webstore/detail/multi-lingual-input-tools/dkbgodmmblfcnfledmedmepimmpebnjo?hl=en&authuser=0" target="_blank" rel="noopener">Chrome Webstore&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a> | <a href="https://microsoftedge.microsoft.com/addons/detail/multilingual-input-tools/aoehggnalolhonphifnooepocfjpghfl" target="_blank" rel="noopener">Microsoft Edge Add-ons&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p>
                 </div>
             </div>
         </div>
