--- a/nav.html
+++ b/nav.html
@@ -1,13 +1,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 <section id="about-me">
-    <div id="about-me-inner">
-        <div id="about-me-top">
-            <img src="assets/sai-picture-circle.png" alt="E" style="width: 125px;"><br>
-            <div style="display: inline-flex; align-items: center; margin-top: -20px;">
-                <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">
-                <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
-            </div>
-        </div>
+    <img class="width-125px margin_top-30px" src="assets/sai-picture-circle.png" alt="E"><br>
+    <div id="about-me-top-inner">
+        <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">
+        <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
     </div>
 </section>
 <br>
@@ -21,8 +17,8 @@
         <a href="extensions.html" class="nav-link" id="nav-extensions">Browser Extensions</a>
         <a href="apps.html" class="nav-link" id="nav-apps">Apps</a>
         <a href="clubs.html" class="nav-link" id="nav-clubs">Clubs</a>
-        <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-blog" target="_blank">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
-        <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github">GitHub&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+        <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-blog" target="_blank" rel="noopener">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
+        <a href="https://github.com/devsai9" target="_blank" class="nav-link" id="nav-github" rel="noopener">GitHub&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
         <a href="youtube_channels.html" class="nav-link" id="nav-ytchannel">YouTube Channel</a>
     </div>
 </nav>
