--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 <section id="about-me">
-    <img class="width-125px margin_top-30px" src="assets/sai-picture-circle.png" alt="E"><br>
+    <a href="#main" class="nav-link" id="nav-skip-to-content">Skip to Content</a>
+    <img class="width-125px margin_top-10px" src="assets/sai-picture-circle.png" alt="My Picture"><br>
     <div id="about-me-top-inner">
-        <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">
         <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
     </div>
 </section>
@@ -11,9 +11,10 @@
     <div id="nav-links">
         <a href="index.html" class="nav-link" id="nav-aboutme">About Me</a>
         <a href="projects.html" class="nav-link" id="nav-projects">Projects</a>
-        <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
+        <a href="research_volunteer.html" class="nav-link" id="nav-research">Research/Volunteer</a>
         <a href="global_competetions.html" class="nav-link" id="nav-globalcomps">Global Competetions</a>
         <a href="bootcamps.html" class="nav-link" id="nav-bootcamps">Bootcamps</a>
+        <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
         <a href="extensions.html" class="nav-link" id="nav-extensions">Browser Extensions</a>
         <a href="apps.html" class="nav-link" id="nav-apps">Apps</a>
         <a href="clubs.html" class="nav-link" id="nav-clubs">Clubs</a>
