--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sai Siddhish Chandra Sekaran</title>
+    <title>Sai Chandra</title>
     <link href="styles.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
@@ -14,12 +14,12 @@
         <div id="about-me-inner">
             <p>Hello 👋<br><br>A high school freshman from Centennial High School, Howard County, Maryland. Passionate coder, blogger, and YouTuber. Technology enthusiast and gadgets saavy.</p>
             <p class="subtitle">
-                <b class="font_size-15px color-white"><i class="bi bi-controller"></i>&nbsp;&nbsp;Hobbies:</b> Table Tennis, Video Games, Coding, YouTube, Blogging<br><br>
+                <b class="font_size-15px color-white"><i class="bi bi-controller"></i>&nbsp;&nbsp;Hobbies:</b> Table Tennis, Video Games, Coding, YouTube, Watching TV, Blogging, Building Websites, Reading Technology articles & blogs, Gaming with friends, Spending time with family.<br><br>
                 <b class="font_size-15px color-white"><i class="bi bi-heart"></i>&nbsp;&nbsp;Areas of Interest:</b> AI & Robotics, Data Science & Machine Learning, Computer Science<br><br>
                 <b class="font_size-15px color-white"><i class="bi bi-code-slash"></i>&nbsp;&nbsp;Programming Languages:</b> HTML5 (Markup Language), CSS3 (Stylesheet Language), SASS (Preprocessor Language), JavaScript, jQuery (JS Library), Java, C#, MATLAB, Python, Lua (Roblox)<br><br>
                 <b class="font_size-15px color-white"><i class="bi bi-tools"></i>&nbsp;&nbsp;Tools:</b> Git, Visual Studio 2019 & 2022, Visual Studio Code, Windows Forms, Replit, Unity 2021, PyCharm 2021 & 2022, MATLAB 2021, Roblox Studio 2022, Android Studio Chipmunk 2021<br>
             </p>
-            <p class="font_size-15px color-white"><i class="bi bi-envelope-fill"></i>&nbsp;Email me at <a href="mailto:saisiddhish@gmail.com" >saisiddhish@gmail.com</a></p>
+            <p class="font_size-15px color-white text_align-center"><i class="bi bi-envelope-fill"></i>&nbsp;Email me at <a href="mailto:saisiddhish@gmail.com" >saisiddhish@gmail.com</a><br><br><br>Designed & Developed by: Sai Siddhish Chandra Sekaran<br><br>©️ Copyright 2022, Sai Siddhish Chandra Sekaran, All Rights Reserved</p>
         </div>
     </main>
     <script>
