Added Favicons and Titles to all pages

--- a/nav.html
+++ b/nav.html
@@ -3,6 +3,7 @@
     <a href="#main" class="nav-link" id="nav-skip-to-content">Skip to Content</a>
     <img class="width-125px margin_top-10px" src="assets/sai-picture-circle.png" alt="My Picture"><br>
     <div id="about-me-top-inner">
+        <img id="about-me-logo" src="assets/s-logo.jpg" alt="S Logo">&nbsp;&nbsp;
         <p id="about-me-name">Sai Siddhish Chandra Sekaran</p>
     </div>
 </section>
@@ -15,7 +16,7 @@
         <a href="global_competetions.html" class="nav-link" id="nav-globalcomps">Global Competetions</a>
         <a href="bootcamps.html" class="nav-link" id="nav-bootcamps">Bootcamps</a>
         <a href="certificates.html" class="nav-link" id="nav-certificates">Certificates</a>
-        <a href="extensions.html" class="nav-link" id="nav-extensions">Browser Extensions</a>
+        <a href="browser_extensions.html" class="nav-link" id="nav-extensions">Browser Extensions</a>
         <a href="apps.html" class="nav-link" id="nav-apps">Apps</a>
         <a href="clubs.html" class="nav-link" id="nav-clubs">Clubs</a>
         <a href="https://devsai.hashnode.dev" class="nav-link" id="nav-blog" target="_blank" rel="noopener">Blog&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a>
