--- a/clubs.html
+++ b/clubs.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sai Siddhish Chandra Sekaran</title>
+    <title>School Clubs | Sai Chandra</title>
+    <link href="assets/s-logo-circle.png" rel="icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="styles.css" rel="stylesheet">
 </head>
