--- a/youtube_channels.html
+++ b/youtube_channels.html
@@ -12,21 +12,21 @@
 <body>
     <div id="loadedNav"></div>
     <main id="main">
-        <div id="cards" style="flex-direction: column;">
+        <div id="cards" class="flex_direction-column">
             <div class="card">
                 <div class="card">
-                    <img src="assets/yt_channel_icons/techmcgamez.png" alt="Tech MC Gamez Icon" style="border-radius: 200px; width: 125px;">
+                    <img src="assets/yt_channel_icons/techmcgamez.png" alt="Tech MC Gamez Icon" class="border_radius-200px width-125px">
                     <div class="card-right">
-                        <p class="title"><a href="https://www.youtube.com/channel/UCMUr84eGnS0x4uspwzbd-7w" target="_blank">TechMCGamez&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
+                        <p class="title"><a href="https://www.youtube.com/channel/UCMUr84eGnS0x4uspwzbd-7w" target="_blank" rel="noopener">TechMCGamez&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
                         <p class="subtitle">Gaming Channel</p>
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="card">
-                    <img src="https://yt3.ggpht.com/ytc/AMLnZu9fzUhi_JNGJoJw_ni3QI5RKwO5UnmPOUkIUVC9=s88-c-k-c0x00ffffff-no-rj" alt="Code Vibes Icon" style="border-radius: 200px; width: 125px;">
+                    <img src="https://yt3.ggpht.com/ytc/AMLnZu9fzUhi_JNGJoJw_ni3QI5RKwO5UnmPOUkIUVC9=s88-c-k-c0x00ffffff-no-rj" alt="Code Vibes Icon"  class="border_radius-200px width-125px">
                     <div class="card-right">
-                        <p class="title"><a href="https://www.youtube.com/channel/UC2OUBrGSPqJBm4A32YVbe9A" target="_blank">Code Vibes&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
+                        <p class="title"><a href="https://www.youtube.com/channel/UC2OUBrGSPqJBm4A32YVbe9A" target="_blank" rel="noopener">Code Vibes&nbsp;&nbsp;<i class="bi bi-box-arrow-up-right"></i></a></p><br>
                         <p class="subtitle">Coding Channel</p>
                     </div>
                 </div>
