Mobile Friendly-ISH

--- a/bootcamps.html
+++ b/bootcamps.html
@@ -24,7 +24,7 @@
                 <img src="https://th.bing.com/th/id/OIP.bbeVOdgKcK5i4rMsRGCAlwHaF7?pid=ImgDet&rs=1" alt="QUIZ Image">
                 <div class="card-right">
                     <p class="title">TANA Artifical Intelligence (AI) Bootcamp | November 2021</p><br>
-                    <p class="subtitle">Create enterprise-grade machine learning models with an emphasis on<br>classification, regression, and clustering to address real-world issues.</p>
+                    <p class="subtitle">Create enterprise-grade machine learning models with an emphasis on classification, regression, and clustering to address real-world issues.</p>
                 </div>
             </div>
         </div>
