--- a/clubs.html
+++ b/clubs.html
@@ -8,6 +8,11 @@
     <link href="assets/s-logo-circle.png" rel="icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link href="styles.css" rel="stylesheet">
+    <style>
+        .card {
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
     <div id="loadedNav"></div>
